<resources>
    <string name="app_name">MyTalkMobile</string>
    <string name="have_an_account">You have to login to an existing account first, or create a new account, before you can sync.</string>
    <string name="confirm_email_problem">Your email and confirmed email are not the same. They must be the same to register.</string>
    <string name="ok">OK</string>
    <string name="confirm_password_problem">Your password and confirmed password are not the same. They must be the same to register.</string>
    <string name="name_problem">Your name must be at least 4 characters with a single space separating your first and last name.</string>
    <string name="username_problem">Your username must be at least 4 characters.</string>
    <string name="username_too_long">Your username cannot be more than 8 characters.</string>
    <string name="password_too_short">Your password must be at least 3 characters.</string>
    <string name="email_reg_test">^([a-zA-Z0-9_\\-\\.+-]+)@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4})(\\]?)$</string>
    <string name="invalid_email">Your email does not appear to be a valid address. Please reenter and try again.</string>
    <string name="username_characters">Your username can only contain letters and numbers.</string>
    <string name="error_code">Error Code: </string>
    <string name="media_error">Media Error!</string>
    <string name="alert">Alert</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="home">Home</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Author</string>
    <string name="sync">Sync</string>
    <string name="help">Help</string>
    <string name="preferences">Preferences</string>
    <string name="finding_server">Finding Server&#8230;</string>
    <string name="syncing">Syncing&#8230;</string>
    <string name="retrieving_boards">Retrieving Boards&#8230;</string>
    <string name="sorry">Sorry!</string>
    <string name="saving_boards">Saving boards&#8230;</string>
    <string name="login_to_MyTalk">Login to MyTalkTools</string>
    <string name="tts_not_available">Text to speech is not available for:</string>
    <string name="enter_a_phrase">Enter a Phrase in: </string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="enter_default_board">Enter Optional Default Board:</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username_hint">enter user name</string>
    <string name="enter_password_hint">enter password</string>
    <string name="enter_default_board_hint">optional default board</string>
    <string name="authoring_account_login">Authoring Account Login</string>
    <string name="myTalk_user">MyTalk User</string>
    <string name="name_of_user_hint">name of device user</string>
    <string name="password">Password</string>
    <string name="password_hint">any 3&#8211;8 characters</string>
    <string name="password_repeat_hint">repeat to confirm</string>
    <string name="contact_information">Contact Information</string>
    <string name="name_hint">care taker or clinician</string>
    <string name="email">Email</string>
    <string name="email_hint">enter your email</string>
    <string name="email_repeat_hint">repeat to confirm</string>
    <string name="merge">Merge</string>
    <string name="overwrite_device">Overwrite Device</string>
    <string name="overwrite_workspace">Overwrite Workspace</string>
    <string name="copy_from_sample">Copy From Sample</string>
    <string name="sound">Sound</string>
    <string name="images">Images</string>
    <string name="from_library">Library Image Search</string>
    <string name="from_web_image">Web Image Search</string>
    <string name="paste_image">Paste Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="enter_sample_account_name">Enter sample account name</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="overwrites_workspace">This will overwrite BOTH your device and your workspace.</string>
    <string name="text">Text</string>
    <string name="board">Board</string>
    <string name="copy_cell">Copy Cell</string>
    <string name="paste_cell">Paste Cell</string>
    <string name="home_cell">Home Cell</string>
    <string name="back_cell">Back Cell</string>
    <string name="clear_cell">Clear Cell Img/Sound/Text</string>
    <string name="rotate_image">Rotate Image</string>
    <string name="camera">Camera</string>
    <string name="video_camera">Video Camera</string>
    <string name="done_authoring">Done Authoring</string>
    <string name="remember_me">Remember Me</string>
    <string name="search_hint">Start typing...</string>
    <string name="all">All</string>
    <string name="bw">B&amp;W</string>
    <string name="photo">Photo</string>
    <string name="drawing">Drawing</string>
    <string name="faces">Faces</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="about">About</string>
    <string name="delete_sound">Delete Sound</string>
    <string name="paste_sound">Paste Sound</string>
    <string name="record_sound">Record Sound</string>
    <string name="save_media">Save Media to Device</string>
    <string name="delete_board">Delete Board</string>
    <string name="new_board">New Board</string>
    <string name="insert_existing_board">Insert Existing Board</string>
    <string name="add_row">Add Row</string>
    <string name="add_column">Add Column</string>
    <string name="delete_last_row">Delete Last Row</string>
    <string name="delete_right_column">Delete Right Column</string>
    <string name="compress_columns">Compress Columns By 1</string>
    <string name="stretch_columns">Stretch Columns By 1</string>
    <string name="number_of_rows">Number of Rows:</string>
    <string name="number_of_columns">Number of Columns:</string>
    <string name="stop">Stop</string>
    <string name="public_library">Public Library</string>
    <string name="private_library">Private Library</string>
    <string name="symbolstix">Symbolstix</string>
    <string name="web_page">Web Page</string>
    <string name="text_to_speech">Text-To-Speech</string>
    <string name="version">1.1</string>
    <string name="press_mic_to_record">&#8230;Press mic to begin recording&#8230;</string>
    <string name="cell_text">"Cell Text: "</string>
    <string name="_stopped_">&#8230;Stopped&#8230;</string>
    <string name="enter_name">Enter name</string>
    <string name="no_punctuation_or_spaces_">No punctuation, or spaces.</string>
    <string name="_paused_">&#8230;Paused&#8230;</string>
    <string name="_playing_">&#8230;Playing&#8230;</string>
    <string name="_recording_">&#8230;Recording&#8230;</string>
    <string name="no_mic">Failed. You may not have a microphone or it may not be working. You may need to attach an external microphone to your device to record.</string>
    <string name="copy_existing_board">Copy Existing Board</string>
    <string name="to_home">To Home</string>
    <string name="go_back">Go Back</string>
    <string name="no_camera_on_this_device">No camera on this device</string>
    <string name="enter_text">Enter Text</string>
    <string name="sure_merge_device_workspace">Are you sure you want to merge your device and workspace data?</string>
    <string name="confirmation">Confirmation</string>
    <string name="sure_overwrite_device_with_workspace">Are you sure you want to overwrite your device with workspace data?</string>
    <string name="select_rotation">Select Rotation</string>
    <string name="invalid_image">Invalid image</string>
    <string name="sending_boards_">Sending boards&#8230;</string>
    <string name="sending_">"Sending: "</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="mytalktools_logo">MyTalkTools Logo</string>
    <string name="image_detail">Image Detail</string>
    <string name="number2">2</string>
    <string name="name">Name</string>
    <string name="will_overwrite_workspace">This will overwrite your workspace. Are you sure you want to continue?</string>
    <string name="saved_images">Saved Images</string>
    <string name="go">Go</string>
    <string name="back">Back</string>
    <string name="capture">Capture</string>
    <string name="forward">Forward</string>
    <string name="enter_url">Enter a website address</string>
    <string name="suggestedUrl">http://www.</string>
    <string name="no_internet">You have no internet connection. Your username and password does not match your previous session. Unable to validate.</string>
    <string name="turn_on_WiFi">Make sure that your device has Wi-Fi turned on</string>
    <string name="sendemail">Email support</string>
    <string name="visitwebsite">Visit our website</string>
    <string name="tellfriend">Tell a friend</string>
    <string name="homeMenu">Home</string>
    <string name="speakMenu">Talk</string>
    <string name="text_prop">Text and Other Properties</string>
    <string name="colorKey">Color Key</string>
    <string name="edit_image">Edit Image</string>
    <string name="scribe">Scribe</string>
    <string name="marginWidth">Margin Width</string>
    <string name="use_margin_for_color_coding">Use Margin For Color Coding</string>
    <string name="use_external_storage">Use External Storage</string>
    <string name="use_external_storage_explain">User external storage card for saving application files</string>
    <string name="save_media_explain">When downloading media save to your devices media folders</string>
    <string name="color_key_explain">Use Goosen or Fitzgerald color coding</string>
    <string name="phrase_mode">Phrase Mode</string>
    <string name="phrase_mode_explain">Select this option to use phrases instead of single words</string>
    <string name="zoom_pictures">Zoom Pictures</string>
    <string name="zoom_pictures_explain">Select this option to zoom pictures when selected</string>
    <string name="unzoom_interval">Unzoom Interval</string>
    <string name="unzoom_interval_explain">Select the seconds to automatically return from zooming pictures</string>
    <string name="maximum_rows">Maximum Rows</string>
    <string name="maximum_rows_explain">Select the maximum number of rows to display</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="color_scheme_explain">Select your preferred color scheme</string>
    <string name="default_font_size">Default Font Size</string>
    <string name="default_font_size_explain">Set the default font size</string>
    <string name="basic_text_to_speech">Basic Text To Speech</string>
    <string name="basic_text_to_speech_explain">Use built-in text-to-speech if there is no sound file in a cell</string>
    <string name="margin_width_explain">Set the cell margin width</string>
    <string name="use_margin_for_color_coding_explain">Set this ON to use cell margins for Goosen or FItzgerald color coding</string>
    <string name="phrase_image_explain">Add Phrases to Phrase Bar with Images</string>
    <string name="phrase_image">Add Phrases with Images</string>
    <string name="sound_search">Sound Library Search</string>
    <string name="video_from_library">Video Library Search</string>
    <string name="board_from_library">Board Library Search</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="restoreFromBackup">Restore from Backup</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="purchase_license">Purchase License</string>
</resources>