<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/images" android:id="@+id/images" android:icon="@drawable/ic_menu_gallery">
        <menu>
            <item android:id="@+id/deleteImage" android:title="@string/delete_image" android:icon="@drawable/ic_menu_delete"></item>
            <item android:title="@string/saved_images" android:id="@+id/savedImages"></item>
            <item android:id="@+id/camera" android:title="@string/camera" android:enabled="true"></item>
            <item android:id="@+id/videoCamera" android:title="@string/video_camera" android:enabled="true"></item>
            <item android:id="@+id/webPage" android:enabled="true" android:title="@string/web_page"></item>
            <item android:id="@+id/fromInternetImage" android:title="@string/from_web_image"></item>
            <item android:id="@+id/imagesFromLibrary" android:title="@string/from_library" android:enabled="true"></item>
            <item android:id="@+id/videosFromLibrary" android:title="@string/video_from_library" android:enabled="true"></item>
            <item android:id="@+id/pasteImage" android:title="@string/paste_image"></item>
            <item android:id="@+id/rotateImage" android:title="@string/rotate_image"></item>
            <item android:id="@+id/editImage"  android:title="@string/edit_image"></item>
            <item android:id="@+id/scribe" android:title="@string/scribe"></item>
        </menu>
    </item><item android:id="@+id/sound" android:title="@string/sound" android:enabled="true">
        <menu>
            <item android:id="@+id/deleteSound" android:title="@string/delete_sound" android:icon="@drawable/ic_menu_delete"></item>
            <item android:id="@+id/pasteSound" android:title="@string/paste_sound"></item>
            <item android:id="@+id/soundFromLibrary" android:title="@string/sound_search"></item>
            <item android:id="@+id/recordSound" android:title="@string/record_sound"></item>
            <item android:id="@+id/textToSpeech" android:title="@string/text_to_speech" android:enabled="true"></item>
        </menu>
    </item>
    
    <item android:title="@string/board" android:id="@+id/board" android:enabled="true">
        <menu>
            <item android:id="@+id/deleteBoard" android:icon="@drawable/ic_menu_delete" android:title="@string/delete_board"></item>
            <item android:id="@+id/newBoard" android:title="@string/new_board"></item>
            <item android:id="@+id/insertExistingBoard" android:title="@string/insert_existing_board"></item>
            <item android:id="@+id/boardsFromLibrary" android:title="@string/board_from_library"></item><item android:id="@+id/boardSort" android:title="@string/sort"/>
            <item android:id="@+id/addRow" android:title="@string/add_row"></item>
            <item android:id="@+id/addColumn" android:title="@string/add_column"></item>
            <item android:id="@+id/deleteLastRow" android:title="@string/delete_last_row"></item>
            <item android:id="@+id/deleteRightColumn" android:title="@string/delete_right_column"></item>
            <item android:id="@+id/compressColumns" android:title="@string/compress_columns"></item>
            <item android:id="@+id/stretchColumns" android:title="@string/stretch_columns"></item>
            
        </menu>
    </item>
	<item android:title="@string/text_prop" android:id="@+id/textProperties" android:enabled="true">
	</item>
    <item android:id="@+id/copyCell" android:title="@string/copy_cell"></item>
    <item android:id="@+id/pasteCell" android:title="@string/paste_cell" android:icon="@drawable/ic_menu_paste_dark"></item>
    <item android:id="@+id/homeCell" android:title="@string/home_cell" android:icon="@drawable/ic_menu_home"></item>
    <item android:id="@+id/backCell" android:title="@string/back_cell"></item>
    <item android:id="@+id/clearCell" android:title="@string/clear_cell"></item>
</menu>
