<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/SignIn"
        android:alphabeticShortcut="a"
        android:enabled="true"
        android:icon="@drawable/ic_menu_login"
        app:showAsAction="always"
        android:title="@string/login"
        android:visible="false"></item>
    <item
        android:id="@+id/authorDone"
        android:alphabeticShortcut="d"
        android:icon="@drawable/ic_menu_login"
        app:showAsAction="always|withText"
        android:title="@string/done_authoring"
        android:visible="false"></item>
    <item
        android:id="@+id/undo"
        android:alphabeticShortcut="u"
        android:icon="@drawable/ic_menu_revert"
        app:showAsAction="ifRoom"
        android:title="@string/undo"
        android:visible="false"></item>
    <item
        android:id="@+id/redo"
        android:alphabeticShortcut="r"
        app:showAsAction="ifRoom|withText"
        android:title="@string/redo"
        android:visible="false"></item>
    <item
        android:id="@+id/Sync"
        android:alphabeticShortcut="s"
        android:enabled="true"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/sync"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/merge"
                android:alphabeticShortcut="m"
                android:enabled="true"
                app:showAsAction="never"
                android:title="@string/merge"></item>
            <item
                android:id="@+id/overwriteDevice"
                android:alphabeticShortcut="d"
                android:icon="@drawable/ic_menu_download"
                app:showAsAction="never"
                android:title="@string/overwrite_device"></item>
            <item
                android:id="@+id/overwriteWorkspace"
                android:alphabeticShortcut="w"
                android:enabled="true"
                android:icon="@drawable/ic_menu_upload"
                app:showAsAction="never"
                android:title="@string/overwrite_workspace"></item>
            <item
                android:id="@+id/copyFromSample"
                android:alphabeticShortcut="s"
                app:showAsAction="never"
                android:title="@string/copy_from_sample"></item>
            <item
                android:id="@+id/restoreFromBackup"
                android:alphabeticShortcut="r"
                android:enabled="true"
                app:showAsAction="never"
                android:title="@string/restoreFromBackup"
                android:visible="true" />
        </menu>
    </item>
    <item
        android:id="@+id/Preferences"
        android:alphabeticShortcut="p"
        android:enabled="true"
        android:icon="@drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"
        android:title="@string/preferences"
        android:visible="false"></item>
    <item
        android:id="@+id/homeMenu"
        android:alphabeticShortcut="h"
        android:icon="@drawable/ic_menu_home"
        app:showAsAction="ifRoom"
        android:title="@string/homeMenu"
        android:visible="true"></item>
    <item
        android:id="@+id/speakActionButton"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_menu_start_conversation"
        app:showAsAction="ifRoom"
        android:title="@string/speakMenu"
        android:visible="true"></item>
    <item
        android:id="@+id/editMode"
        android:alphabeticShortcut="e"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_menu_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/edit_mode"
        android:visible="false"></item>
    <item
        android:id="@+id/HelpMenu"
        android:alphabeticShortcut="h"
        android:enabled="true"
        android:icon="@drawable/ic_menu_help"
        app:showAsAction="ifRoom"
        android:title="@string/help"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/sendEmail"
                android:enabled="true"
                android:icon="@drawable/ic_menu_compose"
                app:showAsAction="never"
                android:title="@string/sendemail"></item>
            <item
                android:id="@+id/tellFriend"
                android:enabled="true"
                android:icon="@drawable/ic_menu_invite"
                app:showAsAction="never"
                android:title="@string/tellfriend"></item>
            <item
                android:id="@+id/visitWebsite"
                android:enabled="true"
                app:showAsAction="never"
                android:title="@string/visitwebsite"></item>
        </menu>
    </item>
    <item
        android:id="@+id/findCell"
        android:alphabeticShortcut="S"
        android:enabled="true"
        android:title="@string/search"
        android:visible="true"></item>
    <item
        android:id="@+id/buyLicense"
        android:enabled="true"
        android:title="@string/purchase_license"
        android:visible="true"></item>

</menu>